--- a/clone.html
+++ b/clone.html
@@ -30,11 +30,6 @@
             </div>
         </header>
 
-
-
-
-
-
         <div class="height-168 flex-container justify-content-between relative grey-border page-padding z-index-1">
             <!-- airbnb 로고 -->
             <div style="flex-basis: 140px;"
@@ -50,8 +45,6 @@
                     </svg>
                 </a>
             </div>
-
-
 
             <!-- 1-2번째 div -->
             <div style="min-width: 348px; flex-basis: auto;" class="z-index-0 flex-grow-0 flex-shrink-1">
@@ -1140,7 +1133,7 @@
             에어비앤비 플랫폼을 통하여 예약된 숙소, 체험, 호스트 서비스에 관한 의무와 책임은 해당
             서비스를 제공하는 호스트에게 있습니다.</div>
     </div>
-
+    <script src="clone.js"></script>
 </body>
 
 </html>
