Docs: change annotation

--- a/clone.html
+++ b/clone.html
@@ -20,16 +20,8 @@
 </head>
 
 <body>
-    <!-- 1번째 div -->
+    <!-- 헤더 부분 -->
     <div>
-        <header id="head" class="height-64">
-            <div class="height-64 flex-container justify-content-center">
-                <button class="head-button">
-                    <span class="font-black font-16px font-600">에어비엔비에서 사랑받고 있는 '게스트 선호' 숙소에 대해 알아보기</span>
-                </button>
-            </div>
-        </header>
-
         <div class="height-168 flex-container justify-content-between relative grey-border page-padding z-index-1">
             <!-- airbnb 로고 -->
             <div style="flex-basis: 140px;"
@@ -46,11 +38,11 @@
                 </a>
             </div>
 
-            <!-- 1-2번째 div -->
+            <!-- 여행 카테고리, 여행지, 여행일정 검색 -->
             <div style="min-width: 348px; flex-basis: auto;" class="z-index-0 flex-grow-0 flex-shrink-1">
                 <div class="padding-0px-80px flex-container justify-content-center width-full text-left absolute-00 ">
                     <div class="width-full">
-                        <!-- 위에거 -->
+                        <!-- 여행 카테고리 검색 -->
                         <div class="flex-container justify-content-center">
                             <div class="height-80 flex-container align-items-center">
                                 <div class="flex-container">
@@ -81,7 +73,7 @@
                         </div>
 
 
-                        <!-- 아래거 -->
+                        <!-- 여행지, 여행일정 검색 -->
                         <div style="width: 100%;" class="flex-container justify-content-center">
                             <div style="margin: 0 36.5px;"
                                 class="flex-container justify-content-center width-full padding-bottom-16px">
@@ -160,15 +152,17 @@
             </div>
 
 
-            <!-- 1-3번째 div -->
+            <!-- 마이페이지 관련 -->
             <div class="height-80 flex-container justify-content-between align-items-center">
                 <div class="flex-container justify-content-between align-items-center margin-8px">
+                    <!-- 호스트 링크 -->
                     <div class="highlight-grey padding-12px">
                         <a href="https://www.airbnb.co.kr/host/homes">
                             <span class="font-black font-14px font-600">당신의 공간을 에어비엔비하세요</span>
                         </a>
 
                     </div>
+                    <!-- 언어 설정 -->
                     <div>
                         <div class="highlight-grey">
                             <button class="transparent-button padding-12px">
@@ -184,7 +178,7 @@
 
                     </div>
                 </div>
-
+                <!-- 마이페이지 설정 -->
                 <div class="flex-container justify-content-between">
                     <button class="flex-container justify-content-between align-items-center login-button">
                         <div style="height: 16px; width: 16px;">
@@ -211,7 +205,7 @@
         </div>
     </div>
 
-    <!-- 2번째 div -->
+    <!-- 여행지 상세 메뉴 -->
     <div class="page-padding padding-top-12px">
         <div class="height-78 flex-container justify-content-between align-items-center width-full">
             <div class="flex-container justify-content-between column-gap-32px">
@@ -348,7 +342,7 @@
 
     </div>
 
-    <!-- 3번째 div 그리드 사용 -->
+    <!-- 숙소 리스트 -->
     <div class="list-grid-container page-padding">
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/26300485?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1610140890&search_mode=flex_destinations_search&check_in=2024-02-16&check_out=2024-02-21&source_impression_id=p3_1708063150_hLtFDqlHTxn5eE8i&previous_page_section_name=1000&federated_search_id=630ee33b-d0f4-4ee5-b2ee-085d05d7d5be"
@@ -772,9 +766,9 @@
                 <span>더 보기</span>
             </button>
         </div>
-
     </div>
 
+    <!-- 다음 여행을 위한 추천 여행지 -->
     <div style="background-color: rgb(247, 247, 247);" class="page-padding padding-48px-0px">
         <div class="font-22px font-600">
             <span>다음 여행을 위한 추천 여행지</span>
@@ -910,6 +904,7 @@
         </ul>
     </div>
     <div class="grey-line"></div>
+    <!-- footer -->
     <div style="background-color: rgb(247, 247, 247);" class="page-padding">
         <footer class="footer-upper-grid-container">
             <section>
