--- a/clone.html
+++ b/clone.html
@@ -773,33 +773,34 @@
         <div class="font-22px font-600">
             <span>다음 여행을 위한 추천 여행지</span>
         </div>
-        <div style="margin-top: 8px;" class="flex-container justify-content-start recommand-travel-list" role="tablist">
-            <button id="tab-seo-0" role="tab" aria-controls="panel-seo-0" aria-selected="true">
-                <span>인기</span>
+        <div id="tab-seo" style="margin-top: 8px;" class="flex-container justify-content-start recommand-travel-list"
+            role="tablist">
+            <button id="tab-seo-0" class="font-grey" role="tab" aria-controls="panel-seo-0" aria-selected="false">
+                인기
             </button>
-            <button id="tab-seo-1" role="tab" aria-controls="panel-seo-1" aria-selected="false">
-                <span>예술 및 문화</span>
+            <button id="tab-seo-1" class="font-grey" role="tab" aria-controls="panel-seo-1" aria-selected="false">
+                예술 및 문화
             </button>
-            <button id="tab-seo-2" role="tab" aria-controls="panel-seo-2" aria-selected="false">
-                <span>야외</span>
+            <button id="tab-seo-2" class="font-grey" role="tab" aria-controls="panel-seo-2" aria-selected="false">
+                야외
             </button>
-            <button id="tab-seo-3" role="tab" aria-controls="panel-seo-3" aria-selected="false">
-                <span>산맥</span>
+            <button id="tab-seo-3" class="font-grey" role="tab" aria-controls="panel-seo-3" aria-selected="false">
+                산맥
             </button>
-            <button id="tab-seo-4" role="tab" aria-controls="panel-seo-4" aria-selected="false">
-                <span>해변</span>
+            <button id="tab-seo-4" class="font-grey" role="tab" aria-controls="panel-seo-4" aria-selected="false">
+                해변
             </button>
-            <button id="tab-seo-5" role="tab" aria-controls="panel-seo-5" aria-selected="false">
-                <span>카테고리</span>
+            <button id="tab-seo-5" class="font-grey" role="tab" aria-controls="panel-seo-5" aria-selected="false">
+                카테고리
             </button>
-            <button id="tab-seo-6" role="tab" aria-controls="panel-seo-6" aria-selected="false">
-                <span>즐길거리</span>
+            <button id="tab-seo-6" class="font-grey" role="tab" aria-controls="panel-seo-6" aria-selected="false">
+                즐길거리
             </button>
         </div>
         <div class="grey-line"></div>
-        <div>
+        <div id="panel-seo">
             <!-- 인기 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-0">
+            <div id="panel-seo-0" role="tabpanel" aria-labelledby="tab-seo-0">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/canmore-canada/stays">
@@ -907,7 +908,7 @@
                 </ul>
             </div>
             <!-- 예술 및 문화 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-1">
+            <div id="panel-seo-1" role="tabpanel" aria-labelledby="tab-seo-1">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/phoenix-az/stays">
@@ -1014,7 +1015,7 @@
                 </ul>
             </div>
             <!-- 야외 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-2">
+            <div id="panel-seo-2" role="tabpanel" aria-labelledby="tab-seo-2">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/lake-martin-al/stays/lakehouses">
@@ -1121,7 +1122,7 @@
                 </ul>
             </div>
             <!-- 산맥 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-3">
+            <div id="panel-seo-3" role="tabpanel" aria-labelledby="tab-seo-3">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/mentone-al/stays/houses">
@@ -1216,7 +1217,7 @@
                 </ul>
             </div>
             <!-- 해변 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-4">
+            <div id="panel-seo-4" role="tabpanel" aria-labelledby="tab-seo-4">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/dauphin-island-al/stays/apartments">
@@ -1323,7 +1324,7 @@
                 </ul>
             </div>
             <!-- 카테고리 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-5">
+            <div id="panel-seo-5" role="tabpanel" aria-labelledby="tab-seo-5">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/stays/amazing-pools">
@@ -1430,7 +1431,7 @@
                 </ul>
             </div>
             <!-- 즐길거리 -->
-            <div role="tabpanel" aria-labelledby="panel-seo-6">
+            <div id="panel-seo-6" role="tabpanel" aria-labelledby="tab-seo-6">
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/london-united-kingdom/things-to-do">
