Feat: recommand tour list tab panel

--- a/clone.html
+++ b/clone.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="reactive_layout.css">
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="transition.css">
 </head>
 
 <body>
@@ -775,7 +776,7 @@
         </div>
         <div id="tab-seo" style="margin-top: 8px;" class="flex-container justify-content-start recommand-travel-list"
             role="tablist">
-            <button id="tab-seo-0" class="font-grey" role="tab" aria-controls="panel-seo-0" aria-selected="false">
+            <button id="tab-seo-0" class="font-black" role="tab" aria-controls="panel-seo-0" aria-selected="false">
                 인기
             </button>
             <button id="tab-seo-1" class="font-grey" role="tab" aria-controls="panel-seo-1" aria-selected="false">
@@ -908,7 +909,7 @@
                 </ul>
             </div>
             <!-- 예술 및 문화 -->
-            <div id="panel-seo-1" role="tabpanel" aria-labelledby="tab-seo-1">
+            <div id="panel-seo-1" role="tabpanel" aria-labelledby="tab-seo-1" hidden>
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/phoenix-az/stays">
@@ -1015,7 +1016,7 @@
                 </ul>
             </div>
             <!-- 야외 -->
-            <div id="panel-seo-2" role="tabpanel" aria-labelledby="tab-seo-2">
+            <div id="panel-seo-2" role="tabpanel" aria-labelledby="tab-seo-2" hidden>
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/lake-martin-al/stays/lakehouses">
@@ -1122,7 +1123,7 @@
                 </ul>
             </div>
             <!-- 산맥 -->
-            <div id="panel-seo-3" role="tabpanel" aria-labelledby="tab-seo-3">
+            <div id="panel-seo-3" role="tabpanel" aria-labelledby="tab-seo-3" hidden>
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/mentone-al/stays/houses">
@@ -1217,7 +1218,7 @@
                 </ul>
             </div>
             <!-- 해변 -->
-            <div id="panel-seo-4" role="tabpanel" aria-labelledby="tab-seo-4">
+            <div id="panel-seo-4" role="tabpanel" aria-labelledby="tab-seo-4" hidden>
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/dauphin-island-al/stays/apartments">
@@ -1324,7 +1325,7 @@
                 </ul>
             </div>
             <!-- 카테고리 -->
-            <div id="panel-seo-5" role="tabpanel" aria-labelledby="tab-seo-5">
+            <div id="panel-seo-5" role="tabpanel" aria-labelledby="tab-seo-5" hidden>
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/stays/amazing-pools">
@@ -1431,7 +1432,7 @@
                 </ul>
             </div>
             <!-- 즐길거리 -->
-            <div id="panel-seo-6" role="tabpanel" aria-labelledby="tab-seo-6">
+            <div id="panel-seo-6" role="tabpanel" aria-labelledby="tab-seo-6" hidden>
                 <ul class="recommand-list-grid-container">
                     <li>
                         <a href="https://www.airbnb.co.kr/london-united-kingdom/things-to-do">
