Feat: highlight selected button

--- a/clone.html
+++ b/clone.html
@@ -7,17 +7,17 @@
     <link rel="shortcut icon" sizes="76x76" type="image/x-icon"
         href="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico">
     <title>에어비엔비</title>
-    <link rel="stylesheet" href="animation.css">
-    <link rel="stylesheet" href="basic_element.css">
-    <link rel="stylesheet" href="button.css">
-    <link rel="stylesheet" href="etc.css">
-    <link rel="stylesheet" href="flex.css">
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="navigation.css">
-    <link rel="stylesheet" href="reactive_layout.css">
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="text.css">
-    <link rel="stylesheet" href="transition.css">
+    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/basic_element.css">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/etc.css">
+    <link rel="stylesheet" href="css/flex.css">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/reactive_layout.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/text.css">
+    <link rel="stylesheet" href="css/transition.css">
 </head>
 
 <body>
@@ -395,7 +395,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/13903824?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1620494697&search_mode=flex_destinations_search&check_in=2024-03-04&check_out=2024-03-09&source_impression_id=p3_1708675616_YOgZtyI707fi5vUD&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -446,7 +445,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/668146487515150072?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1624612910&search_mode=flex_destinations_search&check_in=2024-03-03&check_out=2024-03-08&source_impression_id=p3_1708675616_1tGPDWF20ePZ%2Fgmo&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -497,7 +495,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/51809333?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1609107727&search_mode=flex_destinations_search&check_in=2024-03-01&check_out=2024-03-06&source_impression_id=p3_1708675616_j8phitm4XYJQVDvn&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -550,7 +547,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/742424658135898180?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1608475478&search_mode=flex_destinations_search&check_in=2024-03-08&check_out=2024-03-13&source_impression_id=p3_1708675616_AtK8l03CmtNd3%2Bim&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -601,7 +597,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/53505989?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1614135100&search_mode=flex_destinations_search&check_in=2024-08-01&check_out=2024-08-06&source_impression_id=p3_1708675616_NGvATIfLMkBoa%2Bgs&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -652,7 +647,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/1112254?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1654182496&search_mode=flex_destinations_search&check_in=2024-03-01&check_out=2024-03-06&source_impression_id=p3_1708675616_G8DVEsHn078o8eTE&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -703,7 +697,6 @@
                 </svg>
             </button>
         </div>
-
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/13016398?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1606405559&search_mode=flex_destinations_search&check_in=2024-03-01&check_out=2024-03-06&source_impression_id=p3_1708675616_meDOlFAipR9C9QSc&previous_page_section_name=1000&federated_search_id=f704a88e-86e0-4ad6-88dc-dde8535b7a3f"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
@@ -754,8 +747,6 @@
                 </svg>
             </button>
         </div>
-
-
     </div>
 
     <div style="margin: 56px 0px; text-align: center;" class="page-padding">
@@ -776,25 +767,25 @@
         </div>
         <div id="tab-seo" style="margin-top: 8px;" class="flex-container justify-content-start recommand-travel-list"
             role="tablist">
-            <button id="tab-seo-0" class="font-black" role="tab" aria-controls="panel-seo-0" aria-selected="false">
+            <button id="tab-seo-0" class="font-black relative" role="tab" aria-controls="panel-seo-0" aria-selected="false">
                 인기
             </button>
-            <button id="tab-seo-1" class="font-grey" role="tab" aria-controls="panel-seo-1" aria-selected="false">
+            <button id="tab-seo-1" class="font-grey relative" role="tab" aria-controls="panel-seo-1" aria-selected="false">
                 예술 및 문화
             </button>
-            <button id="tab-seo-2" class="font-grey" role="tab" aria-controls="panel-seo-2" aria-selected="false">
+            <button id="tab-seo-2" class="font-grey relative" role="tab" aria-controls="panel-seo-2" aria-selected="false">
                 야외
             </button>
-            <button id="tab-seo-3" class="font-grey" role="tab" aria-controls="panel-seo-3" aria-selected="false">
+            <button id="tab-seo-3" class="font-grey relative" role="tab" aria-controls="panel-seo-3" aria-selected="false">
                 산맥
             </button>
-            <button id="tab-seo-4" class="font-grey" role="tab" aria-controls="panel-seo-4" aria-selected="false">
+            <button id="tab-seo-4" class="font-grey relative" role="tab" aria-controls="panel-seo-4" aria-selected="false">
                 해변
             </button>
-            <button id="tab-seo-5" class="font-grey" role="tab" aria-controls="panel-seo-5" aria-selected="false">
+            <button id="tab-seo-5" class="font-grey relative" role="tab" aria-controls="panel-seo-5" aria-selected="false">
                 카테고리
             </button>
-            <button id="tab-seo-6" class="font-grey" role="tab" aria-controls="panel-seo-6" aria-selected="false">
+            <button id="tab-seo-6" class="font-grey relative" role="tab" aria-controls="panel-seo-6" aria-selected="false">
                 즐길거리
             </button>
         </div>
