File: transfer transition.css in css folder

--- a/clone.html
+++ b/clone.html
@@ -767,7 +767,7 @@
         </div>
         <div id="tab-seo" style="margin-top: 8px;" class="flex-container justify-content-start recommand-travel-list"
             role="tablist">
-            <button id="tab-seo-0" class="font-black relative" role="tab" aria-controls="panel-seo-0" aria-selected="false">
+            <button id="tab-seo-0" class="font-black relative selected-button-highlight" role="tab" aria-controls="panel-seo-0" aria-selected="false">
                 인기
             </button>
             <button id="tab-seo-1" class="font-grey relative" role="tab" aria-controls="panel-seo-1" aria-selected="false">
