--- a/clone.html
+++ b/clone.html
@@ -57,31 +57,33 @@
                         <div style="display: contents;">
                             <form action="/s/homes" method="get" role="search">
                                 <!-- 여행 카테고리 검색 -->
-                                <div role="tablist" class="flex-container height-80 align-items-center justify-content-center">
-                                    <div class="height-44">
+                                <div class="flex-container height-80 align-items-center justify-content-center">
+                                    <div role="tablist" class="height-44">
                                         <div class="block-inline z-index-0 text-center">
                                             <button style="width: 100%; height: 100%;" class="experience-button transparent-button align-items-start text-center">
-                                                <div style="margin: 10px 16px;" class="font-black font-600">
+                                                <div style="margin: 10px 16px;" class="font-black font-600 font-16px">
                                                     <span>숙소</span>
                                                 </div>
                                             </button>
                                         </div>
                                         <div class="block-inline z-index-0 text-center">
-                                            <button style="width: 100%; height: 100%;" class="experience-button transparent-button align-items-start text-center">
-                                                <div style="margin: 10px 16px;" class="highlight-grey font-grey font-400">
+                                            <button style="width: 100%; height: 100%;" class="transparent-button align-items-start text-center">
+                                                <div style="margin: 10px 16px;" class="font-grey font-400 font-16px">
                                                     <span>체험</span>
                                                 </div>
                                             </button>
                                         </div>
                                     </div>
 
-                                    <div class="height-44">
-                                        <a href="https://www.airbnb.co.kr/s/experiences/online" class="font-grey font-16px font-400 block">
-                                            <div style="margin: 10px 16px;">
-                                                <span>온라인 체험</span>
+                                    <div class="height-44 z-index-0">
+                                        <a href="https://www.airbnb.co.kr/s/experiences/online" class="block height-full">
+                                            <div class="block-inline height-full">
+                                                <div style="margin: 12px 16px;" class="font-grey font-16px font-400 block">
+                                                    <span>온라인 체험</span>
+                                                </div>
                                             </div>
                                         </a>
-                                    </div>   
+                                    </div> 
                                         
                                     
                                 </div>
